[gd_scene load_steps=3 format=3 uid="uid://b8vnyak2m5wqp"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_mainmenu"]
[ext_resource type="Texture2D" path="res://assets/sprites/backgrounds/newyork1950sstreet.png" id="2_background"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
z_index = -2

[node name="BackgroundSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_background")
expand_mode = 1
stretch_mode = 6
z_index = -1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
text = "Italian BrainRot:
Tutti Fruttini Combinasion"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer1_5" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="FruitIcon" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.85, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 28
text = "Merge the Fruits!"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="PlayButton" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
theme_override_constants/separation = 15

[node name="LeftIcon" type="TextureRect" parent="VBoxContainer/PlayButton"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PlayLabel" type="Button" parent="VBoxContainer/PlayButton"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 40
text = "PLAY"

[node name="RightIcon" type="TextureRect" parent="VBoxContainer/PlayButton"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Spacer2_5" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="Spacer2_6" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "HOW TO PLAY"

[node name="Spacer2_7" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "QUIT GAME"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "High Score: 0"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VersionLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 0.7)
theme_override_font_sizes/font_size = 20
text = "v1.0.0"
horizontal_alignment = 1
